bundled_metadata/force-app/main/default/objects/POS_Orders__c/POS_Orders__c.object-meta.xml
<CustomObject>
    <label>POS Order</label>
    <nameField>
        <displayFormat>Ord-{000000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>