bundled_metadata/force-app/main/default/objects/POS_Orders__c/fields/AFH_Account__c.field-meta.xml
<CustomField>
    <fullName>AFH_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the account placing the POS Kit order.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Orders</relationshipLabel>
    <relationshipName>POS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>