bundled_metadata/force-app/main/default/objects/POS_Orders__c/fields/AFH_Contact__c.field-meta.xml
<CustomField>
    <fullName>AFH_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the contact person associated with the POS Kit order.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>POS Orders</relationshipLabel>
    <relationshipName>POS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>