bundled_metadata/force-app/main/default/objects/POS_Orders__c/fields/AFH_Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>AFH_Delivery_Instructions__c</fullName>
    <description>Stores special delivery instructions provided for the POS Kit order.</description>
    <label>Delivery Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>