bundled_metadata/force-app/main/default/objects/POS_Orders__c/fields/AFH_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>AFH_Order_Status__c</fullName>
    <description>Stores the current status of the POS Kit order.</description>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Hello</fullName>
                <isActive>false</isActive>
                <label>Hello</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>