bundled_metadata/force-app/main/default/objects/POS_Orders__c/fields/AFH_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>AFH_Phone_No__c</fullName>
    <description>Stores the contact phone number for the POS Kit order.</description>
    <label>Phone No</label>
    <type>Phone</type>
</CustomField>