bundled_metadata/force-app/main/default/objects/POS_Orders__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <description>Stores the total quantity of POS Kits included in the order.</description>
    <label>Total Quantity</label>
    <summarizedField>POS_Order_Items__c.Quantity__c</summarizedField>
    <summaryForeignKey>POS_Order_Items__c.POS_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>