bundled_metadata/force-app/main/default/objects/POS_Orders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AFH_Account__c</columns>
    <columns>AFH_Contact__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>AFH_Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>